Fix letter spacing of microcopy h4

--- a/smartforests/scss/overrides.scss
+++ b/smartforests/scss/overrides.scss
@@ -186,6 +186,7 @@ a.card {
     font-size: $small-font-size !important;
     font-family: $font-family-sans-serif !important;
     text-transform: none;
+    letter-spacing: 0;
   }
 }
 
